fixed hero banner tile

--- a/service-web/src/components/programHeader/programHeader.html
+++ b/service-web/src/components/programHeader/programHeader.html
@@ -1,8 +1,8 @@
 <header class="avenir h-100 gradient-blue" v-if="!showHeader">
   <div class=" header-baner">
     <div class="ph3 ph3-m ph3-l relative">
-      <nav class="fixed-header-mobile pt3 pb3 pb0-ns pt0-m pt3-l dt w-100 mw8 center bb nav-border-b">
-        <div class="w-100 w-30-m w-30-l fl ml3 ml0-ns tl pv3-m pa2-l space-logo">
+      <nav class="fixed-header-mobile pt3 pb3 pb0-ns pv0-m pv2-l dt w-100 mw8 center bb nav-border-b">
+        <div class="w-100 w-30-m w-30-l fl ml3 ml0-ns tl pv3-m pt2-l mt1-ns mt0 space-logo">
           <a href="" class="no-underline white f3 f4-m f2-l fw6 ml4 ml0-m ml0-l pl2 pl0-m pl0-l logo-program-page">
             Active Pathways
           </a>
