--- a/service-web/src/views/ProgramPage/programPage.html
+++ b/service-web/src/views/ProgramPage/programPage.html
@@ -5,7 +5,7 @@
          style="'background-image':`url(${require(../../assets/images/walk.jpg)})`">
       <div class="cf center w-100 ph2 ph4-m ph6-l">
         <div class="mw8 center">
-          <div class="cf mt0 tc  pv3 pv5-ns mv2">
+          <div class="cf mt0 tc  pv3 pv5-ns ph0 ph3-ns pv mv2">
             <div class="fl w-50-m w-60-l w-100 pa2 white tl mt5 mt0-ns">
               <h2 class="f1 fw4 mt0">Program title</h2>
               <p class="lh-copy f4 fw4">Use npm to install, share, and distribute code; manage dependencies in your
@@ -22,7 +22,7 @@
             </div>
             <div class="fl w-50-m w-40-l w-100 center relative dn db-m db-l">
               <affix>
-              <div class="bg-white br3 pa3 tl absolute top-0 right-0 z-3 shadow-default">
+              <div class="bg-white br3 pa3 pt4 tl absolute top-0 right-0 z-3 shadow-default">
                 <h3 class="f3 fw6 mt0">Enroll to the Program <img src="../../assets/images/patner-4.jpg"
                                                                   class="w3 v-mid ml4"/></h3>
                 <p class="lh-copy f4 light-grey-blue">Use npm to install, share, and distribute code; manage
@@ -41,7 +41,7 @@
   </section>
   <div class="cf center w-100 ph3 ph4-m ph6-l">
     <section class="mw8 center">
-      <div class="cf mt0 tc  pv3 pv5-ns mv2">
+      <div class="cf mt0 tc  pv3 ph0 ph4-ns pv5-ns mv2">
       <div class="w-100 w-60-m w-60-l ">
         <h2 class="f2 fw4 tl grey-black">Overview</h2>
         <article class="pt3-ns pb2-ns avenir">
