fixed program and dashboard header and logout button

--- a/service-web/src/components/challengeStates/noCheckIn/noCheckIn.html
+++ b/service-web/src/components/challengeStates/noCheckIn/noCheckIn.html
@@ -1,4 +1,4 @@
-<div class="w-100 bg-white black br3 mb5 relative">
+<div class="w-100 bg-white black br3 mb5 mt5 mt0-ns relative">
         <span class="w-100 db bg-washed-blue br4 br--top bt3">
           <span class="w-30 db br4 blue-dark-color pa1"></span>
         </span>
