--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -1,18 +1,8 @@
 <div class="wrapper avenir">
-  <!--<header class="cf w-100 pl3 pr3 ph0-ns bg-white">-->
-  <!--<div class="w-100 w-80-ns center">-->
-  <!--<h3 class="f3 fw2 dark-blue pt2 pb2">DASHBOARD PROPOSAL</h3>-->
-  <!--</div>-->
-  <!--</header>-->
+  <ProgramHeader></ProgramHeader>
   <section class="cf w-100 ph0 ph6-l pt4 gradient-blue">
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
       <div class="w-100 tr">
-        <div class="f6 fw6 link br-pill ph4 mb4 dib tr white pt2 pb2">{{(user && user.name) ? (user.name.first +" "+
-          user.name.last) : ''}} ({{user ? user.email : ''}})
-        </div>
-
-        <a class="f6 fw6 link br-pill ph4 mb4 dib tr white blue-dark-color pt2 pb2"
-           style="cursor: pointer" @click="logout()">Logout</a>
       </div>
       <template v-if="userChallengeStatePending && userChallengeStatePending['status']">
         <component :is="statusComponents[userChallengeStatePending['status']]"
@@ -113,19 +103,33 @@
       </div>
     </div>
   </section>
-  <footer class="cf w-100 bg-light-gray mt5">
-    <div class="w-80 center tc pv3 pv4-ns">
+  <footer class="cf w-100 pa1 pa1-m pa5-l ph6-ns bg-navy white" id="feafooter">
+    <div class="dt w-100 mw8 ph3 ph4-m ph4-l tl center">
       <div class="cf">
-        <div class="fl w-100">
-          <h3 class="f5 fw6 w-100 black-40 ma0">
-            <span class="mr2">Reach us</span> <a class="f6 fw5 navy no-underline white"
+        <div class="fl w-100 w-50-l w-50-m avenir">
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
+            <span class="mr2">Reach us</span> <a class="f5 fw5 white no-underline white"
                                                  href="mailto:activepathways@smartplayds.com">activepathways@smartplayds.com</a>
           </h3>
-          <h3 class="f5 fw6 w-100 black-40 mt2-ns mb2-ns">
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white mt4-ns">
             Join our community on <a href="https://www.facebook.com/getwalkers/"
-                                     class=" navy underline" target="_blank">Facebook</a>
+                                     class=" white underline" target="_blank">Facebook</a>
           </h3>
-          <p class="small-font fw5 black-40 mt1 mb0-ns">Copyright © All rights reserved.</p>
+          <div class="pt4">
+            <a href="/terms#privacy" target="_blank" class="f6 fw5 white mt1">Privacy Policy</a>
+          </div>
+          <div class="pt4">
+            <a href="/terms#terms" target="_blank" class="f6 fw5 white mt1">Terms Of Use</a>
+          </div>
+        </div>
+        <div class="fl w-100 w-50-l w-50-m">
+          <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
+            SMARTplayds Limited</h3>
+          <p class="f6 fw5 white mt2">Collaborate Works - Steward House <span class="underline">14 Commercial Way</span>
+          </p>
+          <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
+          <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
+          <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
         </div>
       </div>
     </div>
