--- a/service-web/src/views/ProgramPage/programPage.html
+++ b/service-web/src/views/ProgramPage/programPage.html
@@ -7,8 +7,8 @@
         <div class="mw8 center">
           <div class="cf mt0 tc  pv3 pv5-ns ph0 ph3-ns pv mv2">
             <div class="fl w-50-m w-60-l w-100 pa2 white tl mt5 mt0-ns">
-              <h2 class="f1 fw4 mt0">Program title</h2>
-              <p class="lh-copy f4 fw4">Use npm to install, share, and distribute code; manage dependencies in your
+              <h2 class="f2 f2-m f1-l fw6 mt0 mb0 mb2-ns">Program title</h2>
+              <p class="lh-copy f4 fw5">Use npm to install, share, and distribute code; manage dependencies in your
                 projects; and
                 share &amp; receive feedback with others.</p>
               <div class="start-box db">
