added refernce linking and normal linking

--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -12,7 +12,7 @@
             <a href=""
                class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns mt1-m " v-scroll-to="'#features'">How it works
             </a>
-            <router-link tag="a" :to="{name:'program-page'}" class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns pointer">
+            <router-link tag="a" :to="{name:'programs-catalogue'}" class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns pointer">
               Programs
             </router-link>
             <a class="f4 f4-m f3-ns b dib-ns pv2 ml3-m ml4-ns pointer"
@@ -42,7 +42,7 @@
             <a href="" @click.stop.prevent="toggle"
                class="w-100 f4 fw5 db white no-underline tl pb3" v-scroll-to="'#features'">How it works
             </a>
-            <router-link tag="div" :to="{name:'program-page'}" class="w-100 f4 fw5 db white no-underline tl pb3 pointer">
+            <router-link tag="div" :to="{name:'programs-catalogue'}" class="w-100 f4 fw5 db white no-underline tl pb3 pointer">
               Programs
             </router-link>
             <a class="w-100 f4 fw5 db white no-underline pb3 tl"
