--- a/service-web/src/components/programHeader/programHeader.html
+++ b/service-web/src/components/programHeader/programHeader.html
@@ -12,12 +12,12 @@
             <a href=""
                class="f5 f5-m f4-ns fw5 dib-ns pv2 ml3-m ml4-ns mt1-m white pointer no-underline">Home
             </a>
-            <router-link tag="div" :to="{name:'program-page'}" class="f5 f5-m f4-ns fw5 dib-ns pv2 ml3-m ml4-ns mt1-m white pointer no-underline">
+            <router-link tag="div" :to="{name:'home-view',  params: { scrollTo: 'features' }}" class="f5 f5-m f4-ns fw5 dib-ns pv2 ml3-m ml4-ns mt1-m white pointer no-underline">
               How it works
             </router-link>
-            <a href="" class="f5 f5-m f4-ns fw5 dib-ns pv2 ml3-m ml4-ns mt1-m white pointer no-underline">
+            <router-link  tag="a" :to="{name: 'programs-catalogue'}" class="f5 f5-m f4-ns fw5 dib-ns pv2 ml3-m ml4-ns mt1-m white pointer no-underline" >
               Programs
-            </a>
+            </router-link>
             <a href="" class="f5 f5-m f4-ns fw5 dib-ns pv2 ml3-m ml4-ns mt1-m white pointer no-underline">
               Sign up
             </a>
