--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -45,7 +45,7 @@
       </div>
     </div>
   </section>
-  <section class="cf center w-100 ph3 ph2-m ph5-l gradient-h" id="features">
+  <section ref="howItWorks" class="cf center w-100 ph3 ph2-m ph5-l gradient-h" id="features">
     <div class="mw8 center tl bt b--lightest-blue pt4">
       <div class="cf mt0 mb5 tc">
         <div class="w-100-l avenir">
